--- a/charts/root-app/templates/root-app.yaml
+++ b/charts/root-app/templates/root-app.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/togarlamhot/local.git
+    repoURL: https://github.com/togarlamhot/testing.git
     path: charts/root-app/
     targetRevision: HEAD
   destination:
