--- a/charts/root-app/templates/root-app.yaml
+++ b/charts/root-app/templates/root-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: root-apps
+  name: root-app
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
