--- a/charts/helm-guestbook/templates/deployment.yaml
+++ b/charts/helm-guestbook/templates/deployment.yaml
@@ -1,5 +1,5 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: argoproj.io/v1alpha1
+kind: Rollout
 metadata:
   name: {{ template "helm-guestbook.fullname" . }}
   labels:
@@ -50,3 +50,13 @@ spec:
       tolerations:
 {{ toYaml . | indent 8 }}
     {{- end }}
+      strategy:
+        canary:
+          maxSurge: "25%"
+          maxUnavailable: 0
+          steps:
+          - setWeight: 4
+          - pause:
+              duration: 30 #seconds
+          - setWeight: 50
+          - pause: {}
