change docker image

--- a/charts/helm-guestbook/values.yaml
+++ b/charts/helm-guestbook/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 4
 
 image:
-  repository: gcr.io/heptio-images/ks-guestbook-demo
-  tag: 0.1
+  repository: my_web_server
+  tag: latest
   pullPolicy: IfNotPresent
 
 containerPort: 80
