--- a/charts/helm-guestbook/templates/deployment.yaml
+++ b/charts/helm-guestbook/templates/deployment.yaml
@@ -55,7 +55,4 @@ spec:
       maxSurge: {{ .Values.canary.maxSurge }}
       maxUnavailable: {{ .Values.canary.maxUnavaiable }}
       steps:
-      - setWeight: 50
-      - pause: {duration: 30s}
-      - setWeight: 75
-      - pause: {duration: 30s}
+        {{- toYaml .Values.canarySteps | nindent 6 }}
