--- a/charts/helm-guestbook/values.yaml
+++ b/charts/helm-guestbook/values.yaml
@@ -50,8 +50,9 @@ canary:
   maxSurge: "25%"
   maxUnavaiable: 0
 canarySteps:
+  - setWeight: 25
+  - pause: {duration: 30s}
   - setWeight: 50
-  - pause: {duration: 30s}
+  - pause: {duration: 60s}
   - setWeight: 75
-  - pause: {duration: 30s}
-     
+  - pause: {duration: 90s}
